# Epsilon

./: .gitignore  CMakeLists.txt  Epsilon.aps  Epsilon.rc  Epsilon.vcxproj  Epsilon.vcxproj.filters  README.md  SWAT Game.vcxproj  SWAT Game.vcxproj.filters  aicreature.cpp  aicreature.h  audio.cpp  audio.h  creature.cpp  creature.h  defines.h  engine.cpp  engine.h  entity.cpp  entity.h  environment.cpp  environment.h  gui.cpp  gui.h  input.cpp  input.h  item.cpp  item.h  main.cpp  main.hpp  map.cpp  map.h  panel.cpp  panel.h  resource.h  settings.cpp  settings.h  sound.cpp  sound.h  tile.cpp  (+7 more)
Debug/: aicreature.nativecodeanalysis.sarif  aicreature.nativecodeanalysis.xml  engine.nativecodeanalysis.sarif  entity.nativecodeanalysis.sarif  entity.nativecodeanalysis.xml  gui.nativecodeanalysis.sarif  input.nativecodeanalysis.sarif  item.nativecodeanalysis.sarif  map.nativecodeanalysis.sarif  panel.nativecodeanalysis.sarif  pugixml.nativecodeanalysis.sarif  pugixml.nativecodeanalysis.xml  settings.nativecodeanalysis.sarif  sound.nativecodeanalysis.sarif  tile.nativecodeanalysis.sarif  tile.nativecodeanalysis.xml  tool.nativecodeanalysis.sarif  utility.nativecodeanalysis.sarif  utility.nativecodeanalysis.xml  vc142.idb  window.nativecodeanalysis.sarif
Debug/Epsilon.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Epsilon.lastbuildstate  rc.command.1.tlog  rc.write.1.tlog
Debug/SWAT Game.tlog/: SWAT Game.lastbuildstate
data/maps/: debugmap.emp  debugmap.txt  debugmap.xml  testmap.txt  testxmlmap.xml
x64/Debug/: CodeAnalysisResultManifest.txt  Epsilon.exe.recipe  Epsilon.res  Epsilon.vcxproj.FileListAbsolute.txt  NativeCodeAnalysis.read.1.tlog  aicreature.nativecodeanalysis.sarif  aicreature.nativecodeanalysis.xml  aicreature.new.obj.enc  aicreature.obj.enc  audio.nativecodeanalysis.sarif  behavior.nativecodeanalysis.sarif  creature.nativecodeanalysis.sarif  creature.nativecodeanalysis.xml  creature.obj.enc  engine.nativecodeanalysis.sarif  engine.nativecodeanalysis.xml  engine.new.obj.enc  entity.nativecodeanalysis.sarif  entity.nativecodeanalysis.xml  entity.new.obj.enc  entity.obj.enc  environment.nativecodeanalysis.sarif  gui.nativecodeanalysis.sarif  gui.new.obj.enc  input.nativecodeanalysis.sarif  input.nativecodeanalysis.xml  input.new.obj.enc  input.obj.enc  item.nativecodeanalysis.sarif  item.nativecodeanalysis.xml  item.new.obj.enc  item.obj.enc  main.nativecodeanalysis.sarif  main.nativecodeanalysis.xml  main.new.obj.enc  map.nativecodeanalysis.sarif  map.nativecodeanalysis.xml  map.new.obj.enc  map.obj.enc  panel.nativecodeanalysis.sarif  (+26 more)
x64/Debug/Epsilon.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Epsilon.lastbuildstate  clang-cl.14512.delete.1.tlog  clang-cl.16676.delete.1.tlog  clang-cl.16676.write.1.tlog  clang-cl.18936.delete.1.tlog  clang-cl.20020.delete.1.tlog  clang-cl.20172.delete.1.tlog  clang-cl.25852.delete.1.tlog  clang-cl.25852.write.1.tlog  clang-cl.28288.delete.1.tlog  clang-cl.31784.delete.1.tlog  clang-cl.32304.delete.1.tlog  clang-cl.33032.delete.1.tlog  clang-cl.36908.delete.1.tlog  clang-cl.38096.delete.1.tlog  clang-cl.38244.delete.1.tlog  clang-cl.39032.delete.1.tlog  clang-cl.39096.delete.1.tlog  clang-cl.39528.delete.1.tlog  clang-cl.39572.delete.1.tlog  clang-cl.39864.delete.1.tlog  clang-cl.40212.delete.1.tlog  clang-cl.40284.delete.1.tlog  clang-cl.40436.delete.1.tlog  clang-cl.40532.delete.1.tlog  clang-cl.40752.delete.1.tlog  clang-cl.41036.delete.1.tlog  clang-cl.41128.delete.1.tlog  clang-cl.41212.delete.1.tlog  clang-cl.41648.delete.1.tlog  clang-cl.42060.delete.1.tlog  clang-cl.42148.delete.1.tlog  clang-cl.42180.delete.1.tlog  clang-cl.42396.delete.1.tlog  clang-cl.42452.delete.1.tlog  clang-cl.42544.delete.1.tlog  clang-cl.42804.delete.1.tlog  (+91 more)
x64/Release/: CodeAnalysisResultManifest.txt  Epsilon.res  Epsilon.vcxproj.FileListAbsolute.txt  aicreature.nativecodeanalysis.sarif  aicreature.nativecodeanalysis.xml  audio.nativecodeanalysis.sarif  creature.nativecodeanalysis.sarif  creature.nativecodeanalysis.xml  engine.nativecodeanalysis.sarif  engine.nativecodeanalysis.xml  entity.nativecodeanalysis.sarif  entity.nativecodeanalysis.xml  environment.nativecodeanalysis.sarif  gui.nativecodeanalysis.sarif  gui.nativecodeanalysis.xml  input.nativecodeanalysis.sarif  input.nativecodeanalysis.xml  item.nativecodeanalysis.sarif  item.nativecodeanalysis.xml  libtcod.lib  main.nativecodeanalysis.sarif  main.nativecodeanalysis.xml  map.nativecodeanalysis.sarif  map.nativecodeanalysis.xml  panel.nativecodeanalysis.sarif  panel.nativecodeanalysis.xml  pugixml.nativecodeanalysis.sarif  pugixml.nativecodeanalysis.xml  settings.nativecodeanalysis.sarif  settings.nativecodeanalysis.xml  sound.nativecodeanalysis.sarif  sound.nativecodeanalysis.xml  tile.nativecodeanalysis.sarif  tile.nativecodeanalysis.xml  tool.nativecodeanalysis.sarif  tool.nativecodeanalysis.xml  utility.nativecodeanalysis.sarif  utility.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml  window.nativecodeanalysis.sarif  (+1 more)
x64/Release/Epsilon.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Epsilon.lastbuildstate  Epsilon.write.1u.tlog  clang-cl.41048.delete.1.tlog  clang-cl.41048.write.1.tlog  clang-cl.41120.delete.1.tlog  clang-cl.42380.delete.1.tlog  clang-cl.43560.delete.1.tlog  clang-cl.44052.delete.1.tlog  clang-cl.44504.delete.1.tlog  clang-cl.46232.delete.1.tlog  clang-cl.48500.delete.1.tlog  clang-cl.48712.delete.1.tlog  clang-cl.49656.delete.1.tlog  clang-cl.49916.delete.1.tlog  clang-cl.50056.delete.1.tlog  clang-cl.command.1.tlog  clang-cl.read.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
